--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.vichu.roomrecyclerlist.NoteListActivity">
     <item
+        android:id="@+id/action_delete_all"
+        android:orderInCategory="100"
+        android:title="Delete All"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
         android:title="About"
