[Recycler_Room_Note]included delete all and update noteactivity.
Signed-off-by: vishnu.muraleedharan <vishnu.muraleedharan@quest-global.com>

--- a/app/src/main/res/layout/note_list_activity.xml
+++ b/app/src/main/res/layout/note_list_activity.xml
@@ -5,18 +5,25 @@
     android:layout_width="match_parent">
     <LinearLayout
        android:id="@+id/linear_recycler_list_no_note"
-        android:layout_gravity="center"
+        android:layout_marginTop="250dp"
+        android:layout_marginLeft="130dp"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+        <ImageView
+            android:src="@drawable/empty"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
         <TextView
             android:textStyle="bold"
             android:textSize="30sp"
             android:textColor="@color/colorAccent"
             android:id="@+id/text_list_empty"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:gravity="center"
-            android:text="No Notes to Show" />
+            android:text="No Notes" />
+
 
     </LinearLayout>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -24,6 +31,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <LinearLayout android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Title:"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_note_title"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Content:"/>
+
+        <EditText
+            android:id="@+id/text_note_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:layout_marginTop="50dp"
+            android:id="@+id/button_note_save"
+            android:text="Save"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 
     <android.support.v7.widget.RecyclerView
@@ -34,11 +72,4 @@
 
 
 </LinearLayout>
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingactionbar_addnote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:src="@drawable/add"
-        android:layout_margin="@dimen/fab_margin" />
 </FrameLayout>
