--- a/app/src/main/res/layout/note_list_view.xml
+++ b/app/src/main/res/layout/note_list_view.xml
@@ -19,6 +19,12 @@
             android:layout_margin="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+        <LinearLayout
+            android:background="?android:attr/selectableItemBackground"
+            android:orientation="horizontal"
+            android:layout_margin="2dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <TextView
                 android:textStyle="bold"
                 android:id="@+id/tv_title"
@@ -27,6 +33,16 @@
                 android:textSize="16sp"
                 tools:text="Title"
                 />
+            <TextView
+                android:layout_marginLeft="110dp"
+                android:textStyle="bold"
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                tools:text="Date"
+                />
+        </LinearLayout>
             <TextView
                 android:id="@+id/item_text"
                 android:layout_gravity="center"
